--- a/index.html
+++ b/index.html
@@ -136,44 +136,54 @@ Jerry spends hours reading about the history of faith, its role in government, a
 (if: $faithScore is $doubtScore)[[Jerry still has questions. Faith and doubt will always be a part of his journey.|Share Your Journey]]
 </tw-passagedata><tw-passagedata pid="16" name="Say you don’t think you need faith" tags="" position="75,775" size="100,100">(set: $doubtScore to $doubtScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Jerry reflects on what Pastor Lawson says.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="17" name="Ask if faith is necessary to live a good life" tags="" position="200,775" size="100,100">(set: $faithScore to $faithScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Jerry thinks hard about faith.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="18" name="Realize faith is just a social tool" tags="" position="625,775" size="100,100">(set: $doubtScore to $doubtScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Jerry thinks hard.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="19" name="Still feel like something is missing" tags="" position="725,775" size="100,100">(set: $faithScore to $faithScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Jerry feels lost.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="20" name="Analyze religion from a historical perspective" tags="" position="1025,700" size="100,100">(set: $doubtScore to $doubtScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Jerry thinks logically.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="21" name="Think about personal experiences with faith" tags="" position="750,900" size="100,100">(set: $faithScore to $faithScore + 1)
 
 (script: &quot;
@@ -184,52 +194,64 @@ Jerry spends hours reading about the history of faith, its role in government, a
 &quot;)
 </tw-passagedata><tw-passagedata pid="22" name="Sam brings up faith anyway" tags="" position="1200,350" size="100,100">(set: $doubtScore to $doubtScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Jerry listens and then says thank you.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="23" name="End the call on a light note" tags="" position="1325,350" size="100,100">(set: $doubtScore to $doubtScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Time passes and then Jerry heads home.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="24" name="Defend faith, even if you&#39;re unsure" tags="" position="1575,350" size="100,100">(set: $faithScore to $faithScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Time passes.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="25" name="Agree with Sam and express doubts" tags="" position="1450,350" size="100,100">(set: $doubtScore to $doubtScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Time passes.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="26" name="Admit you&#39;re struggling to believe" tags="" position="350,725" size="100,100">(set: $doubtScore to $doubtScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Jerry thinks about his struggles.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata><tw-passagedata pid="27" name="Say you want to understand faith logically" tags="" position="475,725" size="100,100">(set: $doubtScore to $doubtScore + 1)
 
-(script: &quot;
-   let faithScore = &quot; + $faithScore + &quot;;
-   let doubtScore = &quot; + $doubtScore + &quot;;
-   let url = &#39;https://f3ki.j03.page/index2.html?faithScore=&#39; + faithScore + &#39;&amp;doubtScore=&#39; + doubtScore;
-   window.open(url, &#39;_blank&#39;);
-&quot;)
+Jerry is curious.
+
+Click the link to open part 2.
+
+(click: &quot;Continue&quot;)[
+(set: $externalURL to &quot;https://f3ki.j03.page/index2.html?faithScore=&quot; + (str: $faithScore) + &quot;&amp;doubtScore=&quot; + (str: $doubtScore))
+(open-url: $externalURL)
+]
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
